modules/network/app/main.tf
resource "azurerm_virtual_network" "vnet" {
  name                = var.vnet_name
  address_space       = var.address_space
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_subnet" "subnet_app" {
  name                 = var.subnet_name_app
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = var.address_prefixes_app

  delegation {
    name = "psql-delegation"
    service_delegation {
      name    = "Microsoft.DBforPostgreSQL/flexibleServers"
      actions = ["Microsoft.Network/virtualNetworks/subnets/join/action"]
    }
  }
}

resource "azurerm_private_dns_zone" "postgres_dns" {
  name                = var.dns_zone_name
  resource_group_name = var.resource_group_name
}

resource "azurerm_private_dns_zone_virtual_network_link" "postgres_vnet_link" {
  name                  = var.dns_vnet_link
  private_dns_zone_name  = azurerm_private_dns_zone.postgres_dns.name
  resource_group_name    = var.resource_group_name
  virtual_network_id     = azurerm_virtual_network.vnet.id
  depends_on            = [azurerm_subnet.subnet_app]
}



resource "azurerm_network_security_group" "app_ngs" {
  name = "app-nsg"
  resource_group_name = var.resource_group_name
  location = var.location

  security_rule {
    name = "AppToSonarqube"
    priority = 110
    access = "Allow"
    direction = "Outbound"
    protocol = "Tcp"
    destination_port_range = "9000"
    destination_address_prefix = "10.1.2.0/24"
  }
}
